@@ -23,3 +23,6 @@ def ball_hit():
 def power_up_add_ball_hit():
     print "in power_up_add_ball_hit()"
     AddBall("graphics/balls/red.png")
+
+def stay_brick_hit():
+    PlaySound("sounds/blip.wav")
