@@ -1,3 +1,10 @@
+2001-11-27  Mads Bondo Dydensborg  <madsdyd@ripley>
+
+	* Powerups
+	Added falling down powerups
+	Added two different shots
+	Lots to be done
+
 2001-11-24  Mads Bondo Dydensborg  <madsdyd@ripley>
 
 	* Cleaning up
